Fix path of book covers

Create uuid instead of using book id which can have invalid characters.

BUG: 469138
Fixed-In: 1.1